--- a/classifieds.htm
+++ b/classifieds.htm
@@ -84,7 +84,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="articlepic"> </div>
               <p class="editorsnote">We can help your business do more business on the website as well as the print edition. Online Classified Ads attract tens of thousands of consumers and retailers everyday. For an introductory price, any classified ad placed in the print edition will be included on the website. The Love Express online is becoming the fastest growing newspaper online since its inception the web has gained numerous reviews. </p>
               <div id="classifieds">
-                <p class="qa"><strong>Organ Sales and Repair </strong></p>
+                <p class="qa">Organ Sales and Repair </p>
                 <p><strong> Hammond Organ Sales and Repairs.</strong> Authorized Hammond Organ and Leslie Speaker Dealer.  All musical instruments available. 516-377-7907. <a href="http://www.scottrussmusic.com " target="_blank">www.scottrussmusic.com </a></p>
                 <p class="qa">Ordained Baptist Minister</p>
                 <p><strong>Community Baptist Church of Gordon Heights</strong> seeks Ordained Baptist Minister for pastoral leadership. Location: 605 Granny Road, Middle Island, NY 11953. To apply call 631-481-6613 or email us at cbcgh55@gmail.com. Subimission deadline: postmarked by November 30, 2014</p>
