--- a/events.html
+++ b/events.html
@@ -116,10 +116,46 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
+                  <img src="images/andrae-crouch-sm.jpg" alt="Andrae Crouch" width="67" height="75" /><br>
+    </div>
+                <h2>Andrae Crouch</h2>
+                <p>The singer/songwriter died at age 72 on  Jan. 8th, after suffering a heart attack. New Christ Memorial Church honored  Crouch with public memorial services referred to as &quot;a celebration of  <strong> </strong>...<a href="andrae-crouch.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/shirley-caesar-sm.png" alt="Shirley Caesar" width="73" height="75" /><br>
+    </div>
+                <h2>Benefit Concert</h2>
+                <p>Wheel Chair Chari&shy;ties &amp; Bethel Christian Learn&shy;ing Academy sponsor a Benefit Concert celebrating Black History Month in February with Pastor Shirley Caesar, Wess Morgan, and Valerie Boyd @ New <strong> </strong>...<a href="shirleyceaser.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/pastor-and-co-pastor-john-and-carolyn-jamison-gsw_dsc_0415-sm.jpg" width="83" height="75" alt="Pastor and Co-Pastor John and Carolyn Jamison"><br>
+    </div>
+                <h2>Fit for the Kingdom Conference </h2>
+                <p>This years theme was selected by our Pastor John Jamison as he went before the Lord in prayer concerning the conference &quot;The Holy Spirit&quot; revealed to him that the church must not keep starting ...<a href="fit-for-the-kingdom.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
+    </div>
+                <h2>New York CityServe - CityFest </h2>
+                <p>We have been so encouraged by the many activities surrounding NY CityServe &amp; CityFest since the official launch of the campaign in September. Below are a few updates and prayer requests <strong> </strong>...<a href="new-york-cityserver-cityfest.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/jacob-burgei-sm.jpg" alt="" name="authorpic" width="71" height="75" id="authorpic2" /><br>
+    </div>
+                <h2>The Fuel Movement </h2>
+                <p>The Fuel Movement is growing and expanding in 2015 with The Fuel Training in two locations this year in New Jersey and in New York. The Fuel Leadership Trainings are open for all Youth Pastors,  <strong> </strong>...<a href="the-fuel-movement.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/robertstearns.jpg" alt="" name="authorpic" width="62" height="75" id="authorpic5" /><br>
+    </div>
+                <h2>Turning The Tide </h2>
+                <p>Turning the Tide Con&shy;ference, April 24th-25th, (Friday:6pm; Sa&shy;turday:8:30am). This youth and young adults conference is a gathering of hundreds of young people who are crying out for  <strong> </strong>...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
                   <img style="border:1px #666 solid" src="authors/charlottehall.jpg" height="75" alt="Charlotte Hall" /><br>
     </div>
-                <h2><span class="qa">Time to Step-Up Our Game!</span></h2>
-                <p>Welcome to  the New Year of 2015. If we still find ourselves here in the land of the living  it must be because we have more yet to accomplish for the Kingdom. What has God  told you to do that you still have on <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <h2>Silent No More! - Love, Love, Love!</h2>
+                <p>Hello Beloved! Love is in the air. Really??? &quot;What's love got to do with anything, you ask? My answer would be EVERYTHING! The love that we're going to think about now is not a feeling, it's a decision and  <strong> </strong>...<a href="focuson.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
@@ -130,72 +166,28 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <div class="photocredits2"> </div>
                   <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
     </div>
-                <h2>Jump Start 2014 Taxes!</h2>
-                <p style="padding-bottom:24px;">Happy New Year to you one and all and help us help you ring in the New Year with tax tips we can all use. Earlier is better when it comes to working on your taxes<strong> </strong>...<a href="jump-start-2014-taxes.html">Read More</a>
+                <h2>February Tax Tips!</h2>
+                <p>A tax credit is a dollar-for-dollar reduction of taxes owed. Some credits are refundable-taxes could be reduced to the point that a taxpayer would receive a refund rather than owing any taxes. Taxpayers <strong> </strong>...<a href="donaldreid.html">Read More</a>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/prayer-summit-concert-of-prayer-logo.jpg" width="156" height="75" alt="Concerts of Prayer Logo"><br>
-    </div>
-                <h2>Pastors' Prayer Summit</h2>
-                <p><strong>Conerts of Prayer Greater New York</strong> presents <strong>Pastors Prayer Summit, January 19-21,  2015</strong> with <strong>Dr. Luis Palau, Dr. Bill  Hybels, Dr. Robert Stearns</strong> (Worship)...<a href="pastors-prayer-summit.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/pastorjamaalbernard.jpg" alt="" name="authorpic" width="51" height="75" id="authorpic" /><br>
-    </div>
-                <h2>Pastor Jamaal Bernard</h2>
-                <p><strong>Pastor Jamaal Ber&shy;nard</strong>, son of <strong>Rev. A.R. Bernard</strong>, <strong>Sr</strong>.; foun&shy;der of <strong>Christian  Cultu&shy;ral Center (CCC) </strong>in Brooklyn announces that he will be the  Senior Pastor of the new <strong>CCC Long Island</strong><strong> </strong>...<a href="pastor-jamaal-bernard.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/revealingthesupernaturalconference.jpg" alt="Ed Citronnelli and Natanael Abreu" name="authorpic" width="167" height="75" id="authorpic3" /><br>
-    </div>
-                <h2>Revealing The 
-              Supernatural Conference</h2>
-                <p><strong>World Healing In&shy;ter&shy;national  Mini&shy;&shy;s&shy;tries</strong> presents <strong>Re&shy;vealing the Super&shy;natural Conference</strong> with speaker <strong>Natanael</strong> <strong>Abreu</strong> and Host/ Speaker <strong>Ed</strong> <strong>Ci&shy;tro&shy;nnelli</strong>, <strong>Fri&shy;</strong><strong>day, January 23rd</strong>...<a href="revealing-the-supenatural-conference.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jamesodavis3.jpg" alt="" name="authorpic4" width="77" height="75" id="authorpic4" /><br>
-    </div>
-                <h2>Van Nest AOG </h2>
-                <p><strong>Van Nest Assembly of God Church</strong> pre&shy;sents  special ser&shy;vice on <strong>Friday, January 9th,  8pm </strong>and <strong>Sunday, January 11th,  8:30am, 10am, 11:30am, 4pm</strong> &amp; <strong>7pm</strong> special guest speaker<strong> </strong>...<a href="van-nest-AOG.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/decreeathingpicture.jpg" alt="Clock Image " name="articlepic2" width="75" height="75" class="" id="articlepic2"><br>
-    </div>
-                <h2>Decree A Thing</h2>
-                <p><b>Kingdom Life Mi&shy;ni&shy;s&shy;tries Interna&shy;tional</b> presents <b>IPS (Inter&shy;national Prayer Summit) 48 Hours of Prayer-De&shy;cree A Thing</b>, January 16th-18th, 2015 with <b>Apostle</b><strong> </strong>...<a href="decree-a-thing.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <a href="../www.christianpost.com/default.htm" target="_blank"><img src="images/freedomthroughundergroundgospeljazz.jpg" alt="Christian Post" width="52" height="85"></a><br>
-    </div>
+</div>
                 <h2>Freedom Through  Underground <br>
                   Gospel Jazz</h2>
                 <p><strong>Bethel Gospel Taber&shy;nacle Worship</strong> <strong>&amp;</strong> <strong>Fine Arts, Hope for Ex Offenders &amp; Relume Inc. </strong>present <strong>Freedom Through Underground Gospel Jazz</strong> featuring Grammy Award Winner <strong>Mark</strong><strong> </strong>...<a href="freedom-through-underground-gospel-jazz.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img style="float:right;" src="images/20140906_114903.jpg" width="123" height="75" alt="Lauren Noon"><br>
-    </div>
-                <h2>NYC Craft Entreprenurship Program </h2>
-                <p>Lauren Noon came to New York to pursue a career in fashion. On a whim, she began making bracelets, and Lauren's friends were so impressed that they encouraged her to start .  <strong> </strong>...<a href="nyc-craft-entrepreneurship-program.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/castingcrowns.jpg" alt="Casting Crowns" width="152" height="75"><br>
-  </div>
-                <h2>Casting Crowns Concert</h2>
-                <p>True North and Star 99.1 present Casting Crowns, a Grammy and Dove Award winning Contemporary Christian Rock band will be at Car&shy;ne&shy;gie Hall along with a  <strong> </strong>...<a href="castingcrowns.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
 </div>
                 <h2>Nyack College </h2>
                 <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society.&nbsp; Rev. Kirton is  the  <strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
-                <div id="articlepic"></div>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <br>
+                  <img src="images/pastor-matthew-singh-sm.jpg" alt="" width="87" height="75" /><br>
 </div>
-                <h2>EQUIPPING&#8200;PEOPLE&#8200;IN&#8200;THE&#8200;CHURCH</h2>
-                <p>Most people attend services on a Sunday morning with a need for God to meet, with an issue to be resolved, with a dilemma or with something that they want God to fix. They hope that something  <strong> </strong>...<a href="equipping-people-in-the-church.html">Read More</a></p>
+                <h2>Principles For Lasting Change</h2>
+                <p>One of the  universal desires of human beings is  the desire to improve. It&rsquo;s universal. We all want to grow. We all want to get  better. We all want to improve. We all want to  make something better of our lives<strong> </strong>...<a href="matthew-singh-pinciples-for-lasting-change.html">Read More</a></p>
               </div>
             </div>
             <div class="divider"></div>
