--- a/features.htm
+++ b/features.htm
@@ -139,37 +139,32 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/jesuswashingapostlesfeet1.jpg" width="98" height="75"><br>
+                  <img src="images/rev-timothy-wright.jpg" alt="" width="81" height="75" />
+          </div>
+                <h2>The Power of Forgiveness</h2>
+                <p>There are  many people without whose help, support and guidance this book would never have  seen the light of day. First, I thank God  for giving my family and me the breath of life and strength so that we may  persevere      ...<a href="the-power-of-forgiveness.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/t-d-jakes-jim-garlow.png" alt="" width="157" height="86" /><br>
+          </div>
+                <h2>Racial Reconciliation Summit</h2>
+                <p>When Bishop Harry Jackson, chairman of the High Impact Leadership Coalition and se&shy;nior pastor of Hope Christian Church in Washington, D.C., first called up Bishop T.D. Jakes, one of America's favorite and most influential     ...<a href="racial-reconciliation-summit.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/pastor-lois-rochford2.jpg" alt="Lois Elaine Rochford" name="authorpic5" width="63" height="75" id="authorpic5" /><br>
           </div>
                 <h2>Fasting and Intercession for 2015</h2>
-                <p>About 2 years in the making of The Love Express, the Lord spoke to me, and gave clear direction concerning The Love Express. He told me it would be, and always re&shy;main a clearing house of what the Holy Spirit would     ...<a href="fasting-and-intercession.html">Read More</a>
+                <p>Who can find a virtuous woman? This question is a common biblical reference of the quest to identify a woman of godly character, nobility, grace and honor easily answered, by those who knew and loved Lady Lois Elaine      ...<a href="lois-elaine-rochford.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/luispalau.jpg" alt="Luis Palau" name="authorpic3" width="62" height="75" id="authorpic3" /><br>
+                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="63" height="75" id="authorpic6" /><br>
           </div>
-                <h2>RE:NEW </h2>
-                <p>Imagine  what it would look like if we as individual believers fully understood our  calling. How could our lives change? How could we be used by God to impact more  people for eternity? Imagine what God could do through us in     ...<a href="reNew.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/blacklivesmatter.jpg" width="64" height="75"><br>
-          </div>
-                <h2>Black Lives Matter</h2>
-                <p>The two  largest Pentecostal denominations in the U.S. have called with one voice for  Christians worldwide have affirmed on Sunday, Dec. 14 that indeed &quot;Black  Lives Matter,&quot; and, as admonished in Scripture, to      ...<a href="black-lives-matter.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="72" id="authorpic7" /><br>
-        </div>
-                <h2>How to Pick the Right 'Diet'</h2>
-                <p>It&rsquo;s the  New Year, and you may be super motivated to lose weight. You have undoubtedly  been bombar&shy;ded with advertisements for the latest diets - you know, the ones  that promise to help you lose 10 pounds in a    ...<a href="elizabethmadison.html">Read More</a></p>
+                <h2>6 Tips for Heart Health</h2>
+                <p>You only  have one heart. You have two lungs, two kidneys, and even a regenerative liver,  but only one heart. Though it is the most important organ in the body, we tend  to take it for granted until it stops working th     ...<a href="elizabethmadison.html">Read More</a>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/clockimage.jpg" alt="Clock Image " width="150" height="75"><br>
-          </div>
-                <h2>Procrastination Warning </h2>
-                <p>Heb. 9:27. In this life is the time to seek the Lord. We are warned to remember our creator in the days of our youth while the evil days come not, and the years draw nigh when &quot;thou shalt say     ...<a href="procrastination-warning.html">Read More</a><div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/dimassalaberriosgreyheadshot.jpg" width="67" height="75" alt="Dimas Salaberrios"><br>
-          </div>
+        </div>
                 <h2>Slow Down Pastors</h2>
                 <p>The demands on New York City Pastors are relentless. Manhattan is the most influential island in the world and in every survey the first or second most influential city (only second to London at      ...<a href="slow-down-pastors.html">Read More</a><div id="articlepic">
                   <div class="photocredits2"> </div>
@@ -183,13 +178,6 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         </div>
                 <h2>Build Your Legacy Now</h2>
                 <p>Building  legacy is a pro&shy;cess. If you want your life to make a difference now and for  generations to come, the more you build now, the more people you will impact for decades to come!    ...<a href="buildyourlegacy.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/americanbiblesociety.jpg" alt="" name="authorpic2" height="75" id="authorpic2" /><br>
-      </div>
-                <h2>American Bible Society </h2>
-                <p>The <strong>American Bible Society's</strong>' stated  mission is to engage people &quot;with the life-changing message of God's  Word,&quot; and the 200-year-old Christian nonprofit appears to be pulling out  all the   ...<a href="ads/americanbiblesociety.html">Read More</a></p>
-                <p>&nbsp;</p>
 </div>
             </div>
           <!--SECTION LEFT BEGIN-->
