--- a/fit-for-the-kingdom.html
+++ b/fit-for-the-kingdom.html
@@ -75,9 +75,9 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"></div>
-            <h4 id="articleTitle">Fit for the Kingdom Conference <br>
-              Damascus Road Baptist Church</h4>
+            <div id="articlepic"><img src="images/pastor-and-co-pastor-john-and-carolyn-jamison-gsw_dsc_0415.jpg" width="300" height="210" alt="Pastor and Co-Pastor John and Carolyn Jamison"></div>
+            <h4 id="articleTitle">Fit for the Kingdom Conference </h4>
+            <h4 class="qa">              Damascus Road Baptist Church</h4>
               <div id="authorname"><!--SECTION LEFT END-->
  </div>
               
