--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -97,25 +97,18 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
   <div id="authorname">
     
       <!--SECTION LEFT END--></div>
-  <p align="center" class="qa"><strong><a name="a1"></a>Upper  Room</strong></p>
-  <p><strong>Upper Room Theatre Mi&shy;ni&shy;stry; Pastor and  Overseer Bi&shy;shop William G. Bennett Au&shy;ditions for Easter Play 2015 &ldquo;The Ten  Com&shy;mand&shy;ments&rdquo;</strong> Date: <strong>January  10, 2015</strong> @ <strong>1pm-4pm</strong>; Location:  180 Van Buren Street, Brook&shy;lyn, NY 11221. For additional information please  call Playwright Leslie Green @ 347-737-2392. </p>
-  
-  <p align="center" class="qa"><strong><a name="a2"></a>ABLAZE</strong></p>
-  <p><strong>R.A.W. Int&rsquo;l Mini&shy;stries</strong> presents <strong>RAW 2K15 Ablaze with Pentecostal Fire,  February 12th-15th</strong> with <strong>Bishop  Mi&shy;chael </strong><strong>Blue, Apostle Herman  Mur&shy;ray, Rev. Jackie McCullough, Bishop Neil C. Ellis, Mother May Dupree, Apostle Mat&shy;thew Stevenson,  Pastor Jonathan Shaw</strong> and conference host <strong>Dr. Aretha Wilson</strong> @ <strong>The Em&shy;bas&shy;sy  Conference Center</strong>, 188 Vincent Avenue, Lynbrook, NY 11563. For further  information call (516)825-9043 or visit www. rawinternationalministries.org</p>
-  
-  
-  <p align="center" class="qa"><strong><a name="a3"></a>Prophetic Deliverance</strong></p>
-  <p><strong>Pauline Walley Evangelistic Ministries 10th  School of Pro&shy;phetic Deliverance World Con&shy;vention 2015, January 15th-17th</strong> @ <strong>Robert Treat Hotel</strong>, 50 Park Place,  Newark, New Jersey 07102. Theme: Open the  Floodgates of Heaven: Warfare and Deliverance Strategies. <strong>Dr. Pauline Walley</strong><strong>-Daniels</strong> and <strong>Pastor Frede&shy;rick R. Daniels</strong>. To  register or for more information call (718) 652-2916 or visit us at www.pauline  walley.org<strong><br clear="all">
-  </strong>  </p>
-  <p align="center" class="qa"><strong><a name="a4"></a>Winter White...</strong></p>
-  <p><strong>Triumphant Full Gospel As&shy;sembly, Inc</strong>.  presents <strong>Winter White Fundraiser Brunch,  Saturday, January 17th, 10am</strong> with <strong>Prophetess Denise Baize </strong>@ <strong>Glen  Terrace Caterers, </strong>5313 Avenue N, Brooklyn, New York 11234. Donation: $75.  Hosted by <strong>Bishop Melvin E. Bayne &amp;  Apostle Dr. Lilia A. Bayne</strong>. White Attire. For further information please  call us at (718) 774-4696. </p>
-  
-  <p align="center" class="qa"><strong><a name="a5"></a>Passion 4 Worship</strong></p>
-  <p><strong>Bethel Gospel Tabernacle </strong>presents <strong>Igniting Passion 4 Worship Summit, (2nd  Annual Worship &amp; Fine Arts Ex&shy;pe&shy;ri&shy;ence) April 23-26, 2015</strong> with<strong> Dr. Lamar Boschman, J. Da&shy;vid Bratton,  Rev. Dana Po&shy;well, Dr. Bob Sorge, Dr. Mi&shy;chael Torres</strong> and <strong>Bishop Ro&shy;derick Caesar &amp; Pastor Be&shy;verly  Caesar</strong>, Summit Hosts. Venue: 110-25 Guy R. Brewer Blvd., Jamaica, NY 11434.  To register or for more information please call us at (718)291-2677 or visit us  at www.bgtfi.us.</p>
-  
-  <p align="center" class="qa"><strong>Monk&rsquo;s Memorial</strong></p>
-  <p><strong>Women&rsquo;s Department</strong> invites  you to celebrate their <strong>Annual Women&rsquo;s  Day, Sunday, Jan&shy;uary 18th, 2015 </strong>&nbsp;@ <strong>Monk&rsquo;s  Me&shy;morial Church</strong>, Fulton Street, Brooklyn, NY. <strong>Overseer C. Williams. </strong>For additional information call (516)  429-5475.</p>
-</div><!-- InstanceEndEditable --> 
+  <p align="center" class="qa"><strong><a name="a1"></a>Festival of Miracles</strong></p>
+  <p><span class="qa"><strong></strong></span><strong>Friday-Sunday, Feb. 13th-15th,  6pm</strong> with <strong>Pastor  Sam Onuoha</strong> @ <strong>MCI Auditorium</strong>,  1104 Pa&shy;ci&shy;fic Street, Brooklyn, NY 11238. For more information call 1-888  -401-0038; visit www.somin.org  </p>
+  <p align="center" class="qa"><strong><a name="a2"></a>Awakening the Giant</strong> </p>
+  <p><span class="qa"><strong></strong></span><strong>Jerusalem-A Church without Walls </strong>presents <strong>2015 Designed for Destiny</strong>; a night of  preaching &amp; teaching. Theme:Awa&shy;ken&shy;ing  the Giant within. <strong>Friday, March 13th  6:30pm</strong> with <strong>Pastor Paula White</strong>, <strong>Prophet Max&shy;well </strong><strong>Otu </strong>&amp; guest Psalmist <strong>Judith Ga&shy;yle </strong>@ 3710 Barnes Avenue,  Bronx, NY 10467. Free Ad&shy;mis&shy;sion. Special Re&shy;serva&shy;tions for Clergy; call  (347)974-0772. Vi&shy;sit: www.jerusalemacww.org  </p>
+  <p align="center" class="qa"><strong><a name="a3"></a>Global Leadership</strong></p>
+  <p><span class="qa"><strong></strong></span><strong>Bishop T.D. Jakes</strong> presents <strong>Int&rsquo;l Pastors &amp; Lea&shy;dership  Conference 2015, April 30th-May 2nd; Passport to Global  Leadership</strong> with <strong>Bi&shy;shop T.D. Jakes,  John Max&shy;well, Rev. Samuel Rodriguez, Pastor Chris Hill</strong> &amp; <strong>Pastor Steven Furtick</strong>. Call  1-800-Bishop.2; PastorsandLeaders.org </p>
+  <p align="center" class="qa"><strong><a name="a4"></a>Church Anniversary</strong></p>
+  <p><span class="qa"><strong></strong></span><strong>Faith Worship Center</strong> - <strong>22nd Church Anniversary</strong>, <strong>Friday-Sunday, March 13th-15th,  7pm</strong> with <strong>Min. Andrea McKenzie</strong>, <strong>Min. Samuel Nathan</strong>, <strong>Prophe&shy;tess Shirley Nathan</strong> &amp; <strong>Bishop Leonard Nathan</strong> @ 2145 Pit&shy;kin  Avenue, Brooklyn, NY 11207. Call (718) 566-0701; www.faithworshipcenterinc.org  </p>
+  <p align="center" class="qa"><strong><a name="a5"></a>FGBMF Meeting</strong></p>
+  <p><span class="qa"><strong></strong></span><strong>Full Gospel Businessmen&rsquo;s </strong><strong>Fellowship</strong> meeting, <strong>Sat, Feb. 21st, 9:30am</strong> with <strong>Dil&shy;lon Bur&shy;gin</strong> on expanding  your business borders 2015. @ Zeytuna Market, 59 Maiden Lane, NYC. All trains  to Fulton Street. Call 347-432-8861/917-530- 6406.</p>
+</div>
+            <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
